fix(statistics): vertical layout shift

--- a/webapp/src/app/pacman-features/modules/statistics/statistics/statistics.component.css
+++ b/webapp/src/app/pacman-features/modules/statistics/statistics/statistics.component.css
@@ -22,12 +22,9 @@
     margin-bottom: 18px;
 }
 
-.screenshot-btn {
-    cursor: pointer;
+.screenshot-icon {
     margin-left: auto;
-}
-
-.screenshot-btn-icon {
+    cursor: pointer;
     width: 24px;
     height: 24px;
 }
